chore: refactorings suggested by IDE